# rag-llmops

./: .env  .gitignore  README.md  bentofile.yaml  docker-compose.yml  dockerfile  pyproject.toml
bento/: service.py
observability/: prometheus.yml
src/: api.py  diagnose_retrieval.py  evaluate.py  ingest.py  ingest_semantic.py  ingest_structured.py  log_retrieval.py  rag_chain.py  reranker.py  test_reranker_standalone.py
