[project]
name = "rag-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bentoml>=1.4.39",
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "mlflow>=3.14.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pypdf>=6.14.2",
    "pypdf2>=3.0.1",
    "python-logging-loki>=0.3.1",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
