[project]
name = "rag-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bentoml>=1.4.39",
    "certifi>=2026.6.17",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "mlflow>=3.14.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pypdf>=6.14.2",
    "pypdf2>=3.0.1",
    "python-logging-loki>=0.3.1",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
